trustfall_core/src/resources/test_data/parse_errors/fragment_spread.parse-error.ron
Err(UnsupportedSyntax("fragment spread", Pos(
  line: 6,
  column: 9,
)))
